# smooth-activations

./: .gitignore  CMakeLists.txt  README.md  setup.py
_csrc/smelu_kernels/: pybind_smelu.cpp  smelu.h  smelu_kernels.cu
smelu_example/: srelu_example.py
